# AgentPredict

./: .env.example  .gitignore  README.md  docker-compose.yml  pytest.ini  requirements.txt
agentdocs/: AgentAgents.md  AgentEngine.md  AgentRag.md  BalldontlieMMAAPI.md  Dashboard.md  DiagramOfTheProject.md  GeneralProject.md  PolymarketAPI.md  RequirementsAndRestrictions.md
agents/: Dockerfile  TASK1_REPORT.md
agents/mma/: agent.py  client.py  models.py
agents/polymarket/: agent.py  client.py  models.py
agents/shared/: event_emitter.py  retry.py
agents/tests/api/: test_mma_api.py  test_polymarket_api.py
agents/tests/unit/: test_mma_agent.py  test_polymarket_agent.py
dashboard/: index.html  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/events/: EventCard.tsx  EventFeed.tsx  SourceBadge.tsx
dashboard/src/components/layout/: Header.tsx  TwoColumnLayout.tsx
dashboard/src/components/predictions/: EvidenceList.tsx  PredictionCard.tsx  PredictionFeed.tsx
dashboard/src/components/shared/: StreamWarning.tsx
dashboard/src/hooks/: useEventStream.ts
dashboard/src/tests/components/: EventCard.test.tsx  PredictionCard.test.tsx
dashboard/src/tests/hooks/: useEventStream.test.ts
dashboard/src/types/: events.ts  rag.ts
engine/: CMakeLists.txt
engine/src/: engine.cpp  engine.hpp  event_store.cpp  event_store.hpp  grpc_server.cpp  grpc_server.hpp  main.cpp  normalizer.cpp  normalizer.hpp
engine/tests/unit/: CMakeLists.txt  test_event_store.cpp  test_normalizer.cpp
gateway/: broadcaster.py  engine_subscriber.py  rag_subscriber.py  server.py
gateway/tests/unit/: test_broadcaster.py
humandocs/: 1ProjectSkeleton.txt  2FilesExplained.txt
proto/: events.proto
rag/: context_builder.py  inference.py  orchestrator.py  retriever.py  verifier.py
rag/tests/api/: test_gemini_api.py  test_pinecone_api.py
rag/tests/unit/: test_inference.py  test_orchestrator.py  test_retriever.py
